--- a/styles/master.css
+++ b/styles/master.css
@@ -111,7 +111,8 @@ body {
 #active {
   box-shadow: none;
   margin: 0;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4)
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
+  max-width: 1280px;
 }
 #logo h1 {
   font-family: 'DM Serif Display', serif;
