--- a/styles/master.css
+++ b/styles/master.css
@@ -158,6 +158,7 @@ body {
   padding-left: .5rem;
   padding-right: 1rem;
   font-size: .95rem;
+  cursor: pointer;
 }
 .select-png {
   height: 18px;
