--- a/ftg/reddit/userContent.css
+++ b/ftg/reddit/userContent.css
@@ -70,6 +70,7 @@
   .wBtTDilkW_rtT2k5x3eie, ._2jJNpBqXMbbyOiGCElTYxZ, ._23tSz_ar8phNRBBW1afkYr, .D3IyhBGwXo9jPwz-Ka0Ve, .D3IyhBGwXo9jPwz-Ka0Ve:hover {
     border: none !important;
     border-radius: 0 !important;
+    padding-left: 0 !important;
   }
   .D3IyhBGwXo9jPwz-Ka0Ve:hover {
     outline: 1px solid lightgrey !important;
